# btc_address_server

./: .env  Cargo.toml  Procfile  README.org  restclient  seed.txt
migrations/2021-08-10-022425_add_users/: up.sql
src/: auth.rs  bech32.rs  error.rs  handlers.rs  http.rs  lib.rs  log.rs  main.rs  opcodes.rs  wallet.rs
