[package]
name = "btc_address_server"
version = "0.1.0"
authors = ["chenyanming <elecming@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4.14"
env_logger = "0.9.0"
chrono = {version = "0.4.19", features = ["serde"] }
tokio = {version = "1", features = ["full"]}
anyhow = "1.0.42"
hyper = { version = "0.14", features = ["full"] }
actix-web = "4.0.0-beta.8"
diesel = { version = "1.4.7", features = ["r2d2", "postgres", "chrono"] }
ring = "0.16.20"
hex = "0.4.3"
secp256k1 = "0.20.3"
ripemd160 = "0.9.1"
bs58 = "0.4.0"
bitvec = "0.22.3"
thiserror = "1.0.26"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
